# strofa

./: Cargo.toml  README.md
src/: block.rs  chunk.rs  client.rs  event.rs  key.rs  keybindings.rs  main.rs  state.rs  theme.rs
src/block/: albums.rs  artists.rs  library.rs  mod.rs  playbar.rs  playlists.rs  podcasts.rs  queue.rs  search.rs  sort.rs  tracks.rs
