[package]
name = "strofa"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = { version = "0.17.0", features = ["crossterm"], default-features = false }
crossterm = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
zmerald = { path="../zmerald" }
mpd_client = "0.7.1"
anyhow = "1.0.53"

futures = "0.3.21"
futures-util = "0.3"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
tokio = { version = "1.0.1", features = ["rt", "net", "time", "sync", "macros"] }

# temporary until rust supports async/await syntax for defining streams
async-stream = "0.3.2"